# credlib

./: .gitignore  README.md  setup.cfg
src/credentialcrypto/: __init__.py  __main__.py  createcred.py  password_checker.py
tests/unit/: test_create_cred.py  test_credential.py  test_read_credential.py  test_testCaseBase.py
