[metadata]
name = credentialcrypto
version = 1.0
author = Ian Meinert
classifiers =
    Programming Language :: Python :: 3.10
description = cryptology for credentials
keywords = cryptology, credentials

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    cryptography

[options.packages.find]
where=src